# pdf-a11y-converter

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  app_gui.py  assemble.py  build.py  build_workers.py  cli.py  converter.py  package.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-mac.yml  build-windows.yml
build_temp/pdf-a11y-cli/: warn-pdf-a11y-cli.txt
build_temp/pdf-a11y-gui/: warn-pdf-a11y-gui.txt
config/: config.json  nllb_mapping.json
installer/: models.iss  pdf-a11y-cli.iss  pdf-a11y-gui.iss  pdf-a11y.iss
resources/verapdf/: .installationinformation  auto-install.xml  verapdf-gui
runtime/: requirements-ai.txt
src/: config.py  engine.py  generator.py  jre_manager.py  pdf_diagnostics.py  repair.py  runtime_bootstrap.py  runtime_optimizer.py  validation.py  verapdf_manager.py  vision.py  vsr_generator.py
src/application/: adapters.py  converter_service.py  dom_transformer.py  orchestrator.py
src/domain/: coordinates.py  geometry.py  heading_classifier.py  layout_graph.py  (+4 more)
tests/: BasicTest.md  FootnoteVariants.md  Test_01_Docling_Layout.md  Test_01_Tables.md  Test_02_Formulas.md  Test_02_Marker_Fallback.md  Test_03_Legal.md  Test_03_Tables.md  Test_04_Columns.md  Test_04_Mixed.md  Test_05_HeaderFooter.md  Test_05_PASS_UA_FAIL_WCAG.md  Test_06_FAIL_UA_PASS_WCAG.md  Test_06_Footnotes.md  Test_07_Captions.md  Test_07_Español.md  Test_08_Forms.md  Test_08_gescanntes_Dokument.odt  Test_08_gescanntes_Dokument_b.odt  Test_09_Formulas.md  Test_10_Vision.md  Test_11_Signatures.md  Test_12_Translation.md  conftest.py  test_repair.py
tools/: backup.sh  build.ps1  build_verapdf_profile.py  code_audit.sh  debug_mcid.py  download_models.py  generate_arch.py  generate_test_pdf.py  gpu_test.py  md2pdf_au_tests.sh  measure_quality.py  rebuild_worker_venvs.sh  setup_dev_env.py  setup_workers.py  show_code.py  show_tags.py  vsr.py  zip_code.py
(+112 files in other folders)
